--- a/buttons.html
+++ b/buttons.html
@@ -248,7 +248,7 @@
   
   <script>
     function navigate() {
-      window.open("https://www.notion.so/math-18b57d2b76cd80d2999aed280d91f76d", '_blank').focus();
+      window.open("https://www.notion.so/math-18b57d2b76cd80d2999aed280d91f76d", '_parent').focus();
     }
   </script>
 
