--- a/buttons.html
+++ b/buttons.html
@@ -235,8 +235,8 @@
     }
 
     .large {
-      padding: 15px 60px;
-      font-size: 18px;
+      padding: 10px 45px;
+      font-size: 15px;
     }
   </style>
 
@@ -248,7 +248,7 @@
   
   <script>
     function navigate() {
-      window.open("https://www.notion.so/math-18b57d2b76cd80d2999aed280d91f76d", '_parent').focus();
+      window.open("https://www.notion.so/study-hub-18957d2b76cd8011863af38f105ad30c?p=18c57d2b76cd80edacd0dbf25c6e54d7&pm=c", '_parent').focus();
     }
   </script>
 
