--- a/button.html
+++ b/button.html
@@ -235,7 +235,7 @@
     }
 
     .large {
-      padding: 5px 30px;
+      padding: 10px 35px;
       font-size: 15px;
     }
   </style>
@@ -244,11 +244,11 @@
 
 <body>
 
-  <button class="btn large blue rounded threeD" type="button" onclick="navigate()"> <i class="fa-regular fa-star"></i> Math </button>
+  <button class="btn large blue rounded threeD" type="button" onclick="navigate()"> <i class="fa-regular fa-star"></i> Study Guide </button>
   
   <script>
     function navigate() {
-      window.open("https://www.notion.so/study-hub-18957d2b76cd8011863af38f105ad30c?p=18c57d2b76cd80edacd0dbf25c6e54d7&pm=c", '_parent').focus();
+      window.open("https://docs.google.com/document/d/1Gf3V-47e1M21jUcRb0Rx3YTAGI5wk8Il/edit", '_blank').focus();
     }
   </script>
 
